# Chess

./: .clang-format  .gitignore  CMakeLists.txt  FEN.cpp  FEN.h  LICENSE  README.md  board  board_def.cpp  board_def.h  chess.cpp  chess.h  display.cpp  display.h  game_def.cpp  game_def.h  main.cpp  notation.cpp  notation.h  pgn_file.cpp  pgn_file.h  test_pgn.cpp  utils.cpp  utils.h
chessl/: CMakeLists.txt  board.h  char_types.h  chess.h  defends.cpp  display.h  fen.h  game_state.cpp  make_move.cpp  move_notation.h  move_piece.cpp  moves.cpp  notation.h  pgn.h  position.h  stack_vector.h  validate.cpp
src/: CMakeLists.txt  cli_args.cpp  cli_args.h  display.cpp  display.h  main.cpp  menu.cpp  menu.h  pgn_file.cpp  pgn_file.h  switch_move_notation.cpp  switch_move_notation.h
src/chess/: basic_types.h  board.cpp  board.h  chess.cpp  chess.h  display.cpp  display.h  move_notation.cpp  move_notation.h  position.cpp  position.h  shared.h  shared_notation.cpp  shared_notation.h  standard.h  types.h  utils.h
src/chess/chess2/: CMakeLists.txt  basic_types.h  board.cpp  chess.cpp  chess.h  fixed_array.h  main.cpp  position.cpp  position.h  utils.h
src/chess/chess2/notation/: fen.cpp  fen.h  move_notation.h  pgn.cpp  pgn.h  shared_notation.cpp  shared_notation.h
src/chess/chess2/position/: defends.cpp  gamestate.cpp  make_move.cpp  move_piece.cpp  moves.cpp  place_piece.cpp  turn.cpp  validate.cpp
src/chess/game/: build_position.cpp  build_position.h  game.h
src/chess/notation/: char_types.cpp  char_types.h  fen.cpp  fen.h  move_notation.cpp  move_notation.h  notation.cpp  notation.h  pgn.cpp  pgn.h  shared_notation.cpp  shared_notation.h
src/chess/position/: defends.cpp  defends.h  gamestate.cpp  gamestate.h  make_move.cpp  make_move.h  move_piece.cpp  moves.cpp  moves.h  place_piece.cpp  place_piece.h  position.h  validate.cpp  validate.h
src/chess/standard/: chess_notation.cpp  fen.cpp  gamestate.cpp  move.cpp  pgn.cpp  protects.cpp  shared_notation.cpp  shared_notation.h  valid_moves.cpp  validate.cpp
src/chess/tests/: fen_test.cpp  moves_test.cpp  notation_test.cpp  pgn_test.cpp
